[gd_scene format=3 uid="uid://cia4t8l74taf0"]

[ext_resource type="Script" uid="uid://btrd3swlj643h" path="res://scenes/menu/start/start_screen.gd" id="1_r1bej"]
[ext_resource type="Texture2D" uid="uid://x8s7mk0hluaq" path="res://scenes/menu/start/assets/background.jpg" id="2_3gydo"]

[node name="StartScreen" type="MarginContainer" unique_id=244952836]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_r1bej")
metadata/_edit_use_anchors_ = true

[node name="Background" type="TextureRect" parent="." unique_id=398019975]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_3gydo")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=283772472]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=593473354]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer" unique_id=970121574]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "[rainbow][wave]Flower Talk[/wave][/rainbow]"
fit_content = true
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1296137900]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer" unique_id=451739267]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer" unique_id=1382736450]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer" unique_id=1370366219]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="VersionLabel" type="Label" parent="MarginContainer" unique_id=120315673]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
text = "Version X.Y.Z"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BugReportButton" type="Button" parent="MarginContainer" unique_id=1162992362]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Signalez un Bug"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/BugReportButton" to="." method="_on_bug_report_button_pressed"]
